--- a/styles.css
+++ b/styles.css
@@ -84,10 +84,152 @@ p {
 }
 
 /* ================================= 
+ Form Element and Layout Styles
+==================================== */
+
+form {
+  background-color: #fafbfb;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 10px 20px;
+  width: 75%;
+  -webkit-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.25);
+  -moz-box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.25);
+  box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.25);
+}
+
+fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+legend {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+fieldset.topField,
+fieldset.middleField,
+fieldset.bottomField {
+  margin-top: 50px;
+}
+
+/* ---------------
+    Input fields
+  ---------------- */
+
+.flex-wrapper > div,
+div > textarea {
+  margin-bottom: 20px;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="number"],
+input[type="tel"],
+textarea,
+select {
+  background: rgba(255,255,255,0.1);
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  height: 52px;
+  margin: 0;
+  outline: 0;
+  padding: 18px;
+  width: 100%;
+  background-color: #e8eeef;
+  color: #2b616d;
+  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+  margin-top: 10px;
+  -webkit-transition: all .4s ease-out;
+  -moz-transition: all .4s ease-out;
+  -ms-transition: all .4s ease-out;
+  -o-transition: all .4s ease-out;
+  transition: all .4s ease-out;
+}
+
+input::placeholder {
+  color: #bbbcbc;
+}
+
+input[placeholder*="Required"] {
+  text-align: right;
+  font-style: italic;
+  font-size: 12px;
+}
+
+input:focus, textarea:focus {
+  border: 2px solid #2b616d;
+  background-color: #f8f9f9;
+  -webkit-transition: all .2s ease-in;
+  -moz-transition: all .2s ease-in;
+  -ms-transition: all .2s ease-in;
+  -o-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+}
+
+input[placeholder*="Required"]:focus {
+  text-align: left;
+}
+
+input:not(:placeholder-shown) {
+    text-align: left;
+    font-size: 16px;
+    font-style: normal;
+}
+
+input[name*="user_zip"] {
+  display: block;
+  width: 150px;
+}
+
+input[type*="checkbox"],
+input[type*="radio"] {
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
+
+textarea {
+  height: 100px;
+}
+
+button {
+  padding: 19px 39px 18px 39px;
+  color: #ffffff;
+  background: #2b616d;
+  font-size: 18px;
+  text-align: center;
+  font-style: normal;
+  border-radius: 5px;
+  width: 100%;
+  border: 1px solid #2b616d;
+  border-width: 1px 1px 3px;
+  box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
+  margin-bottom: 10px;
+}
+
+button:hover {
+  background: #347685;
+}
+
+button:active {
+  background: #4091A3;
+}
+
+/* ================================= 
   Base Layout Styles
 ==================================== */
 
 /* ---- Navigation ---- */
+
+.wrap {
+  background-color: #ecfdfb;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23b2dbd5' fill-opacity='0.64'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
 
 .logo {
   width: 150px;
